Tue Nov 26 05:47:32 GMT 2002  Olly Betts <olly@survex.com>

	* backends/quartz/btree.cc: Suppress all output from a successful
	  Btree::Check() is no options are specified, so that btreetest
	  generates clean output when all tests pass.

Tue Nov 19 02:08:30 GMT 2002  Olly Betts <olly@survex.com>

	* NEWS: Updated.

Tue Nov 19 01:46:35 GMT 2002  Olly Betts <olly@survex.com>

	* backends/quartz/btree.cc,backends/quartz/btree.h,
	  backends/quartz/btreetest.cc,backends/quartz/quartztest.cc,
	  docs/quartzdesign.html: Quartz B-tree minimum blocksize is
	  now 2048 bytes (as was in fact documented already).  This
	  means the max term length is now always 252 bytes.

Mon Nov 18 22:16:57 GMT 2002  Olly Betts <olly@survex.com>

	* api/omenquire.cc,matcher/expand.cc,matcher/expandweight.cc:
	  Bit of an expand tidy up.

Mon Nov 18 19:49:09 GMT 2002  Olly Betts <olly@survex.com>

	* backends/quartz/quartz_termlist.cc: I'd put the new termlist stuff
	  in the disabled branch of a "#ifdef" so it wasn't being used!  Fixed
	  this and made it actually compile as an encore.

Mon Nov 18 02:51:55 GMT 2002  Olly Betts <olly@survex.com>

	* docs/todo.xml: Retargetted 0.6 tasks for 0.7 or 0.8; updated a few
	  entries.

Mon Nov 18 02:28:55 GMT 2002  Olly Betts <olly@survex.com>

	* docs/quartzdesign.html,backends/quartz/: We can just store the term
	  name raw in position list key, since we know its length from the key
	  length; tweaked storing of deltas to store (delta - 1) as 0 is
	  invalid.

Mon Nov 18 00:47:54 GMT 2002  Olly Betts <olly@survex.com>

	* backends/quartz/quartz_termlist.cc: First cut of compressed term
	  lists.

Sun Nov 17 20:19:23 GMT 2002  Olly Betts <olly@survex.com>

	* backends/quartz/quartz_lexicon.cc,backends/quartz/quartz_values.cc:
	  Use new pack_uint_last() and unpack_uint_last() where appropriate.

Sun Nov 17 20:03:24 GMT 2002  Olly Betts <olly@survex.com>

	* backends/quartz/quartz_record.cc,backends/quartz/quartz_utils.h: