@@ -57,7 +57,6 @@ using std::string;
 #ifdef BTREE_DEBUG_FULL
 /*------debugging aids from here--------*/
 
-static void print_bytes(int n, const byte * p);
 static void print_key(const byte * p, int c, int j);
 static void print_tag(const byte * p, int c, int j);
 
@@ -1901,239 +1900,4 @@ Btree::next_default(Cursor * C_, int j)
 #endif /* BTREE_DEBUG_FULL */
     }
     return true;
-}
-
-/*********** B-tree checking ************/
-
-static void print_bytes(int n, const byte * p)
-{
-    fwrite(p, n, 1, stdout);
-}
-
-static void print_key(const byte * p, int c, int j)
-{
-    const byte * k = key_of(p, c);
-    int l = GETK(k, 0);
-
-    if (j == 0) {
-	print_bytes(l - K1 - C2, k + K1);
-	printf("/%d", GETC(k, l - C2));
-    } else {
-	for (int i = K1; i < l; i++) {
-	    /*putchar(k[i] < 32 ? '.' : k[i]);*/
-	    int ch = k[i];
-	    if (ch < 32) printf("/%d", ch); else putchar(ch);
-	}
-    }
-}
-
-static void print_tag(const byte * p, int c, int j)
-{
-    int o = GETD(p, c);
-    int o_tag = o + I2 + GETK(p, o + I2);
-    int l = o + GETI(p, o) - o_tag;
-
-    if (j == 0) {
-	printf("/%d", GETC(p, o_tag));
-	print_bytes(l - C2, p + o_tag + C2);
-    } else
-	printf("--> [%d]", get_int4(p, o_tag));
-}
-
-static void print_spaces(int n)
-{
-    printf("%*s", n, "");
-}
-
-/* report_block(B, m, n, p) prints the block at p, block number n, indented by
-   m spaces.
-*/
-
-static int block_usage(const Btree * B, const byte * p)
-{
-    int space = B->block_size - DIR_END(p);
-    int free = TOTAL_FREE(p);
-    return (space - free) * 100 / space;  /* a percentage */
-}
-
-static void report_block(const Btree * B, int m, int n, const byte * p)
-{
-    int j = GET_LEVEL(p);
-    int dir_end = DIR_END(p);
-    int c;
-    print_spaces(m);
-    printf("[%d] *%d (%d) %d%% ",
-	   n, REVISION(p), (dir_end - DIR_START)/D2, block_usage(B, p));
-
-    for (c = DIR_START; c < dir_end; c += D2) {
-	if (c == DIR_START + 6) printf ("... ");
-	if (c >= DIR_START + 6 && c < dir_end - 6) continue;
-
-	print_key(p, c, j);
-	putchar(' ');
-    }
-    putchar('\n');
-}
-
-void Btree::report_block_full(int m, int n, const byte * p)
-{
-    int j = GET_LEVEL(p);
-    int dir_end = DIR_END(p);
-    int c;
-    putchar('\n');
-    print_spaces(m);
-    printf("Block [%d] level %d, revision *%d items (%d) usage %d%%:\n",
-	   n, j, REVISION(p), (dir_end - DIR_START)/D2, block_usage(this, p));
-
-    for (c = DIR_START; c < dir_end; c += D2) {
-	print_spaces(m);
-	print_key(p, c, j);
-	putchar(' ');
-	print_tag(p, c, j);
-	putchar('\n');
-    }
-}
-
-static void failure(int n)
-{
-    fprintf(stderr, "B-tree error %d\n", n);
-    exit(1);
-}
-
-void
-Btree::block_check(Cursor * C_, int j, int opts)
-{
-    byte * p = C_[j].p;
-    int4 n = C_[j].n;
-    int c;
-    int significant_c = j == 0 ? DIR_START : DIR_START + D2;
-	/* the first key in an index block is dummy, remember */
-
-    int max_free = MAX_FREE(p);
-    int dir_end = DIR_END(p);
-    int total_free = block_size - dir_end;
-
-    if (base.block_free_at_start(n)) failure(0);
-    if (base.block_free_now(n)) failure(1);
-    base.free_block(n);
-
-    if (j != GET_LEVEL(p)) failure(10);
-    if (dir_end <= DIR_START || dir_end > block_size) failure(20);
-
-    if (opts & 1) report_block(this, 3*(level - j), n, p);
-
-    if (opts & 2) report_block_full(3*(level - j), n, p);
-
-    for (c = DIR_START; c < dir_end; c += D2) {
-	int o = GETD(p, c);
-	if (o > block_size) failure(21);
-	if (o - dir_end < max_free) failure(30);
-
-	int kt_len = GETI(p, o);
-	if (o + kt_len > block_size) failure(40);
-	total_free -= kt_len;
-
-	if (c > significant_c &&
-	    compare_keys(key_of(p, c - D2), key_of(p,c)) >= 0)
-	    failure(50);
-    }
-    if (total_free != TOTAL_FREE(p)) failure(60);
-
-    if (j == 0) return;
-    for (c = DIR_START; c < dir_end; c += D2) {
-	C_[j].c = c;
-	block_to_cursor(C_, j - 1, block_given_by(p, c));
-	if (overwritten) return;
-
-	block_check(C_, j - 1, opts);
-
-	byte * q = C_[j - 1].p;
-	/* if j == 1, and c > DIR_START, the first key of level j - 1 must be >= the
-	   key of p, c: */
-
-	if (j == 1 && c > DIR_START)
-	    if (compare_keys(key_of(q, DIR_START), key_of(p, c)) < 0)
-		failure(70);
-
-	/* if j > 1, and c > DIR_START, the second key of level j - 1 must be >= the key of p, c: */
-
-	if (j > 1 && c > DIR_START && DIR_END(q) > DIR_START + D2 &&
-	    compare_keys(key_of(q, DIR_START + D2), key_of(p, c)) < 0)
-	    failure(80);
-
-	/* the last key of level j - 1 must be < the key of p, c + D2, if c + D2 < dir_end: */
-
-	if (c + D2 < dir_end &&
-	    (j == 1 || DIR_END(q) - D2 > DIR_START) &&
-	    compare_keys(key_of(q, DIR_END(q) - D2), key_of(p, c + D2)) >= 0)
-	    failure(90);
-
-	if (REVISION(q) > REVISION(p)) failure(91);
-    }
-}
-
-void
-Btree::check(const string & name, const string & opt_string)
-{
-    Btree B;
-    B.open_to_write(name);
-    Cursor * C = B.C;
-
-    int opts = 0;
-    for (string::size_type i = 0; i < opt_string.size(); i++) {
-	switch (opt_string[i]) {
-	    case 't': opts |= 1; break; /* short tree printing */
-	    case 'f': opts |= 2; break; /* full tree printing */
-	    case 'b': opts |= 4; break;
-	    case 'v': opts |= 8; break;
-	    case '+': opts |= 1 | 4 | 8; break;
-	    case '?':
-		printf("use t,f,b,v or + in the option string\n");
-		exit(0);
-	    default:
-		printf("option %s unknown\n", opt_string.c_str());
-		exit(1);
-	}
-    }
-    if (opts & 8)
-	printf("base%c  Revision *%ld  levels %d  root [%ld]%s  blocksize %d  items %ld  lastblock %ld\n",
-		B.base_letter,
-		B.revision_number,
-		B.level,
-		C[B.level].n,
-		B.faked_root_block ? "(faked)" : "",
-		B.block_size,
-		B.item_count,
-		B.base.get_last_block());
-
-    int limit = B.base.get_bit_map_size() - 1;
-
-    limit = limit * CHAR_BIT + CHAR_BIT - 1;
-
-    if (opts & 4) {
-	for (int j = 0; j <= limit; j++) {
-	    putchar(B.base.block_free_at_start(j) ? '.' : '*');
-	    if (j > 0) {
-		if ((j + 1) % 100 == 0) {
-		    putchar('\n');
-		} else if ((j + 1) % 10 == 0) {
-		    putchar(' ');
-		}
-	    }
-	}
-	printf("\n\n");
-    }
-
-    if (B.faked_root_block) {
-	if (opts) printf("void ");
-    } else {
-	B.block_check(C, B.level, opts);
-
-	/* the bit map should now be entirely clear: */
-
-	if (!B.base.is_empty()) {
-	    failure(100);
-	}
-    }
-    if (opts) printf("B-tree checked okay\n");
 }
